--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,12 +5,15 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+@import "animate";
 @import "functions";
 @import "variables";
 @import "mixins";
 @import "root";
 @import "reboot";
+@import "font-face";
 @import "type";
+@import "custom";
 @import "images";
 @import "code";
 @import "grid";
@@ -40,3 +43,5 @@
 @import "carousel";
 @import "utilities";
 @import "print";
+
+@import "header";
