--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
 @import "font-face";
 @import "type";
 @import "custom";
+@import "portfolio";
 @import "images";
 @import "code";
 @import "grid";
