--- a/scss/_font-face.scss
+++ b/scss/_font-face.scss
@@ -30,6 +30,17 @@
 	font-style: normal;
 }
 
+@font-face {
+  font-family: 'devicon';
+  src: url('../src/assets/fonts/Devicon/devicon.eot?-hdf3wh');
+  src: url('../src/assets/fonts/Devicon/devicon.eot?#iefix-hdf3wh') format("embedded-opentype"),
+			 url('../src/assets/fonts/Devicon/devicon.woff?-hdf3wh') format("woff"),
+			 url('../src/assets/fonts/Devicon/devicon.ttf?-hdf3wh') format("truetype"),
+			 url('../src/assets/fonts/Devicon/devicon.svg?-hdf3wh#devicon') format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 /* open-sans-300 - latin */
 @font-face {
