--- a/scss/_font-face.scss
+++ b/scss/_font-face.scss
@@ -32,11 +32,11 @@
 
 @font-face {
   font-family: 'devicon';
-  src: url('../src/assets/fonts/Devicon/devicon.eot?-hdf3wh');
-  src: url('../src/assets/fonts/Devicon/devicon.eot?#iefix-hdf3wh') format("embedded-opentype"),
-			 url('../src/assets/fonts/Devicon/devicon.woff?-hdf3wh') format("woff"),
-			 url('../src/assets/fonts/Devicon/devicon.ttf?-hdf3wh') format("truetype"),
-			 url('../src/assets/fonts/Devicon/devicon.svg?-hdf3wh#devicon') format("svg");
+  src: url('../src/assets/fonts/Devicon/devicon.eot');
+  src: url('../src/assets/fonts/Devicon/devicon.eot') format("embedded-opentype"),
+			 url('../src/assets/fonts/Devicon/devicon.woff') format("woff"),
+			 url('../src/assets/fonts/Devicon/devicon.ttf') format("truetype"),
+			 url('../src/assets/fonts/Devicon/devicon.svg') format("svg");
   font-weight: normal;
   font-style: normal;
 }
