--- a/scss/_devicon.scss
+++ b/scss/_devicon.scss
@@ -1,6 +1,6 @@
 
 [class^="devicon-"], [class*=" devicon-"] {
-  font-family: 'devicon';
+  font-family: 'Devicon';
   speak: none;
   font-style: normal;
   font-weight: normal;
