--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -23,6 +23,58 @@ main {
   }
 }
 
+.list {
+  li {
+    margin-bottom: 1rem;
+  }
+}
+
+.list-icon {
+  li {
+    &:before {
+      display: inline-block;
+      width: 30px;
+      text-align: center;
+      font-family: FontAwesome;
+    }
+    &.icon-skype {
+      &:before {
+        content: '\f17e';
+      }
+    }
+    &.icon-whatsapp {
+      &:before {
+        content: '\f232';
+      }
+    }
+    &.icon-dribbble {
+      &:before {
+        content: '\f17d';
+      }
+    }
+    &.icon-behance {
+      &:before {
+        content: '\f1b4';
+      }
+    }
+    &.icon-linkedin{
+      &:before {
+        content: '\f08c';
+      }
+    }
+    &.icon-github {
+      &:before {
+        content: '\f113';
+      }
+    }
+    &.icon-telegram {
+      &:before {
+        content: '\f2c6';
+      }
+    }
+  }
+}
+
 .footer {
   padding-top: 4rem;
   margin-bottom: 2rem;
