--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -42,7 +42,7 @@
         list-style-type: none;
         padding: 0;
         width: 100%;
-        font-size: .875rem;
+        font-size: 1rem;
 
         li {
           display: inline-block;
