--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -23,7 +23,7 @@
     margin: 1rem 0;
     li {
       display: inline-block;
-      background: lighten( $font-color-light,20% );
+      background: lighten( #bbbbbb, 20% );
       border-radius: .25rem;
       font-size: .75rem;
       padding: 5px 15px;
@@ -59,14 +59,15 @@
     .portfolio-icon {
       height: 100px;
       width: auto;
+      border-radius: .25rem;
     }
     h1 {
       margin: 2rem 0;
     }
   }
   .portfolio-referrence {
-    border-top: 1px solid lighten( $font-color-light,10% );
-    border-bottom: 1px solid lighten( $font-color-light,10% );
+    border-top: 1px solid lighten( #bbbbbb, 20% );
+    border-bottom: 1px solid lighten( #bbbbbb, 20% );
     padding: 3rem 0;
     font-size: 1rem;
     margin-bottom: 0;
@@ -93,7 +94,7 @@
       padding: 0;
       li {
         display: inline-block;
-        background: lighten( $font-color-light,20% );
+        background: lighten( #bbbbbb, 20% );
         border-radius: .25rem;
         font-size: .75rem;
         padding: 5px 15px;
