--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,9 +22,9 @@ $gray-900: #212529 !default;
 $black:    #000 !default;
 
 $heading-color: #1C1C1C !default;
-$font-color: #676767 !default;
+$font-color: #37474F !default;
 $font-color-secondary: #444444 !default
-$font-color-light: #bbbbbb !default
+$font-color-light: #808080 !default
 
 $grays: () !default;
 $grays: map-merge((
@@ -39,7 +39,7 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
-$blue:    #17bed2 !default;
+$blue:    #17a2b8 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
@@ -249,7 +249,7 @@ $font-weight-light:           300 !default;
 $font-weight-normal:          400 !default;
 $font-weight-bold:            700 !default;
 
-$font-weight-base:            $font-weight-normal !default;
+$font-weight-base:            $font-weight-light !default;
 $line-height-base:            1.5 !default;
 
 $h1-font-size:                $font-size-base * 2.5 !default;
