--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,8 @@
 @import "type";
 @import "custom";
 @import "portfolio";
+@import "about";
+@import "contact";
 @import "images";
 @import "code";
 @import "grid";
