--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -11,7 +11,6 @@
   }
   .contact-head {
     text-align: left;
-    padding-top: 4rem;
     margin-bottom: 4rem;
   }
 }
@@ -30,8 +29,16 @@
   }
 }
 
+
+
+@include media-breakpoint-up(md) {
+  .contact-head {
+    padding-top: 4rem;
+  }
+}
 @include media-breakpoint-down(md) {
   .contact-head {
+    padding-top: 2rem;
     h1{
       font-size: 2rem;
     }
